--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,9 @@
   padding: 0;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .home {
@@ -16,7 +15,12 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
+  background-image: linear-gradient(
+      to right,
+      rgba(39, 39, 39, 0.9),
+      rgba(39, 39, 39, 0.3)
+    ),
+    url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
 }
@@ -168,7 +172,12 @@
 .about__bio-image {
   height: 50vh;
   width: 100%;
-  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
+  background-image: linear-gradient(
+      to right,
+      rgba(39, 39, 39, 0.9),
+      rgba(39, 39, 39, 0.3)
+    ),
+    url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
   display: flex;
@@ -238,7 +247,12 @@
 .projects__bio-image {
   height: 50vh;
   width: 100%;
-  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
+  background-image: linear-gradient(
+      to right,
+      rgba(39, 39, 39, 0.9),
+      rgba(39, 39, 39, 0.3)
+    ),
+    url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
   display: flex;
@@ -336,7 +350,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
+  background-image: linear-gradient(
+      to right,
+      rgba(39, 39, 39, 0.9),
+      rgba(39, 39, 39, 0.3)
+    ),
+    url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
 }
