--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,42 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .home {
   height: 100%;
   padding-top: 40vh;
   overflow: hidden;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
-  background-image: linear-gradient(
-      to right,
-      rgba(39, 39, 39, 0.9),
-      rgba(39, 39, 39, 0.3)
-    ),
-    url("../img/model-1.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.9)), to(rgba(39, 39, 39, 0.3))), url("../img/model-1.jpg");
+  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
+  line-height: 4rem;
 }
 
 .home__name {
   font-size: 5rem;
   border-bottom: 2px solid #fff;
   margin-bottom: 1rem;
+  font-weight: 800;
+  padding-bottom: 1rem;
 }
 
 .home__name--last {
   color: #ff652f;
-  font-weight: 700;
 }
 
 .menu-btn {
@@ -43,6 +47,7 @@ body {
   height: 20px;
   width: 28px;
   cursor: pointer;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -53,6 +58,7 @@ body {
   width: 28px;
   height: 3px;
   background-color: #fff;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -63,6 +69,7 @@ body {
   width: 28px;
   height: 3px;
   background-color: #fff;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -73,21 +80,25 @@ body {
   width: 20px;
   height: 3px;
   background-color: #fff;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .menu-btn__burger.open {
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
   background: transparent;
 }
 
 .menu-btn__burger.open::before {
-  transform: rotate(45deg) translate(5px, 5px);
+  -webkit-transform: rotate(45deg) translate(5px, 5px);
+          transform: rotate(45deg) translate(5px, 5px);
 }
 
 .menu-btn__burger.open::after {
   width: 28px;
-  transform: rotate(-45deg) translate(7px, -6px);
+  -webkit-transform: rotate(-45deg) translate(7px, -6px);
+          transform: rotate(-45deg) translate(7px, -6px);
 }
 
 .nav {
@@ -104,43 +115,59 @@ body {
 }
 
 .nav .menu-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 100vh;
   overflow: hidden;
   background: #272727;
   list-style-type: none;
   padding-right: 1rem;
-  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .nav .menu-nav.open {
-  transform: translateX(0);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .nav .menu-nav__item {
-  transform: translateX(100vw);
+  -webkit-transform: translateX(100vw);
+          transform: translateX(100vw);
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .nav .menu-nav__item.open {
-  transform: translateX(0);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .nav .menu-nav__item.active > a {
   color: #ff652f;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
 .nav .menu-nav__link {
   display: inline-block;
   font-size: 2rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
   padding: 2rem 0;
-  font-weight: 700;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -149,19 +176,23 @@ body {
 }
 
 .menu-nav__item:nth-child(1) {
-  transition-delay: 0.05s;
+  -webkit-transition-delay: 0.05s;
+          transition-delay: 0.05s;
 }
 
 .menu-nav__item:nth-child(2) {
-  transition-delay: 0.1s;
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
 }
 
 .menu-nav__item:nth-child(3) {
-  transition-delay: 0.15s;
+  -webkit-transition-delay: 0.15s;
+          transition-delay: 0.15s;
 }
 
 .menu-nav__item:nth-child(4) {
-  transition-delay: 0.2s;
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
 }
 
 .about {
@@ -171,18 +202,23 @@ body {
 .about__bio-image {
   height: 50vh;
   width: 100%;
-  background-image: linear-gradient(
-      to right,
-      rgba(39, 39, 39, 0.9),
-      rgba(39, 39, 39, 0.3)
-    ),
-    url("../img/model-1.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.9)), to(rgba(39, 39, 39, 0.3))), url("../img/model-1.jpg");
+  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .about__bio-image p {
@@ -203,8 +239,10 @@ body {
 .about .jobs {
   width: 65vw;
   margin: 2rem auto 0 auto;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-gap: 2rem;
 }
 
@@ -225,16 +263,23 @@ body {
 }
 
 .about .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .about footer {
-  transform: rotate(90deg) translate(-3rem, -5rem);
+  -webkit-transform: rotate(90deg) translate(-3rem, -5rem);
+          transform: rotate(90deg) translate(-3rem, -5rem);
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -246,18 +291,23 @@ body {
 .projects__bio-image {
   height: 50vh;
   width: 100%;
-  background-image: linear-gradient(
-      to right,
-      rgba(39, 39, 39, 0.9),
-      rgba(39, 39, 39, 0.3)
-    ),
-    url("../img/model-1.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.9)), to(rgba(39, 39, 39, 0.3))), url("../img/model-1.jpg");
+  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .projects__bio-image .text-secondary {
@@ -268,8 +318,10 @@ body {
 .projects__items {
   width: 60vw;
   margin: 2rem auto 0 auto;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-gap: 2rem;
 }
 
@@ -293,6 +345,7 @@ body {
   width: 100%;
   background: #ff652f;
   opacity: 0;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -311,15 +364,20 @@ body {
   height: 100%;
   width: 100%;
   z-index: 1;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
 }
 
 .projects__btn {
   opacity: 0;
   color: #000;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -328,16 +386,23 @@ body {
 }
 
 .projects .social-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .projects footer {
-  transform: rotate(90deg) translate(-3rem, -5rem);
+  -webkit-transform: rotate(90deg) translate(-3rem, -5rem);
+          transform: rotate(90deg) translate(-3rem, -5rem);
 }
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -346,15 +411,18 @@ body {
   height: 100%;
   padding-top: 40vh;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: linear-gradient(
-      to right,
-      rgba(39, 39, 39, 0.9),
-      rgba(39, 39, 39, 0.3)
-    ),
-    url("../img/model-1.jpg");
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(39, 39, 39, 0.9)), to(rgba(39, 39, 39, 0.3))), url("../img/model-1.jpg");
+  background-image: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg");
   background-position: center top;
   background-size: cover;
 }
@@ -365,11 +433,14 @@ body {
 }
 
 .contact__list {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-gap: 2rem;
   font-size: 1.5rem;
-  line-height: 1.8rem;
+  line-height: 1.5rem;
+  font-weight: 700;
 }
 
 .contact .social-icons {
@@ -386,7 +457,8 @@ body {
   }
   .nav .menu-nav {
     display: block;
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
     height: 100%;
     background: transparent;
     text-align: right;
@@ -409,13 +481,15 @@ body {
     height: 40vh;
   }
   .projects__items {
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
   .projects .text-secondary {
     font-size: 3rem;
   }
   .contact__list {
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -424,7 +498,8 @@ body {
     width: 60%;
   }
   .projects__items {
-    grid-template-columns: repeat(3, 1fr);
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
   }
   .projects .text-secondary {
     font-size: 3rem;
@@ -441,13 +516,15 @@ body {
   background: #272727;
   color: #fff;
   height: 100vh;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5rem;
 }
 
 h1,
 h2,
-h3 {
-  font-weight: 400;
+h3,
+li {
+  font-weight: 700;
 }
 
 a {
@@ -475,6 +552,7 @@ main .social-icons {
 
 main a {
   padding: 0.4rem;
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -495,4 +573,3 @@ main footer {
 .text-secondary {
   color: #ff652f;
 }
-/*# sourceMappingURL=main.css.map */
