--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -26,7 +26,9 @@
     grid-template-columns: 1fr;
     grid-gap: 2rem;
     font-size: 1.5rem;
-    line-height: 1.8rem;
+    line-height: 1.5rem;
+    font-weight: 700;
+    // text-transform: lowercase;
   }
 
   .social-icons {
