--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,13 +10,16 @@ body {
   background: $primary-color;
   color: set-text-color($primary-color);
   height: 100vh;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  // font-weight: 700;
+  line-height: 1.5rem;
 }
 
 h1,
 h2,
-h3 {
-  font-weight: 400;
+h3,
+li {
+  font-weight: 700;
 }
 
 a {
