--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -24,12 +24,14 @@
 
   &__bio {
     width: 70%;
-    font-size: 1.2rem;
-    line-height: 1.5rem;
-    text-align: center;
+    // font-size: 1.2rem;
+    // line-height: 1.5rem;
+    // font-size: 0.5rem;
+    // text-align: center;
 
     .text-secondary {
       padding-bottom: 1rem;
+      font-weight: 900;
     }
   }
 
