--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -20,6 +20,12 @@ $secondary-color: #00dcaf;
   }
 }
 
+@mixin media-sm {
+  @media screen and (min-width: 300px) {
+    @content;
+  }
+}
+
 @mixin media-md {
   @media screen and (min-width: 768px) {
     @content;
